Simple Spacing/Styling on Repo Page. Added color buttons to repo cards. Fixed Lang Filter.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,3 @@
-
-
 .profile-div {
   width: 25%;
 }
@@ -48,8 +46,23 @@
 }
 
 .form-div-container {
-  /* height: 50%; */
   margin-bottom: 50px;
+  border-top: solid lightgray 1px;
+}
+
+.form-div-container>*,
+.card-div-container,
+.repo-page-input-top {
+  padding: 10px;
+}
+
+.form-div-container>h3 {
+  font-size: 23px;
+  margin: 0;
+}
+
+.repo-page-input-top {
+  border-bottom: solid lightgray 1px;
 }
 
 .card-div-container {
@@ -67,24 +80,38 @@
   pointer-events: none;
 }
 
+.js-icon {
+  color: #f1e05a;
+}
+
+.css-icon {
+  color: #563d7c;
+}
+
+.html-icon {
+  color: #e44b23;
+}
+
 /* Repo Page Styles ^^^^ elf */
 /*overview Style*/
 .scroll {
-  margin:2px;
+  margin: 2px;
   padding: 4px;
   width: 800px;
   height: 300px;
   overflow-x: hidden;
   overflow-y: auto;
   text-align: justify;
-  border:solid black 2px;
+  border: solid black 2px;
 }
-.overview-card{
+
+.overview-card {
   margin-bottom: 10px;
-  border:solid grey 2px;
+  border: solid grey 2px;
 }
-.overview-sub-title{
-  margin:5px;
+
+.overview-sub-title {
+  margin: 5px;
 }
 
 
@@ -115,8 +142,8 @@
 
 .package-form-card {
   /* padding: 10px; */
-  margin: 10px; 
-  max-width: 800px; 
+  margin: 10px;
+  max-width: 800px;
   height: auto;
 }
 
@@ -124,7 +151,7 @@
   margin: 4px;
 }
 
-.form-intro { 
+.form-intro {
   margin: 10px 15px 20px 0px;
 }
 
@@ -135,7 +162,7 @@
 .delete-package-div {
   display: flex;
   justify-content: space-between;
-  
+
 }
 
 .delete-package-btn {
